Migrated to cordova 13.0.0 to support Android API 34, required by Google Play.